fix more layout bugs

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,7 +176,6 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
@@ -185,12 +184,9 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: calc($spacing-unit / 2);
-        padding-right: -webkit-calc($spacing-unit / 2);
         padding-left: calc($spacing-unit / 2);
-        padding-left: -webkit-calc($spacing-unit / 2);
     }
 }
 
