--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -186,7 +186,6 @@
 .footer-heading {
     font-size: 18px;
     margin-bottom: calc($spacing-unit / 2);
-    margin-bottom: -webkit-calc($spacing-unit / 2);
 }
 
 .contact-list,
@@ -199,42 +198,34 @@
     font-size: 15px;
     color: $grey-color;
     margin-left: calc(-1 * $spacing-unit / 2);
-    margin-left: -webkit-calc(-1 * $spacing-unit / 2);
     @extend %clearfix;
 }
 
 .footer-col {
     float: left;
     margin-bottom: calc($spacing-unit / 2);
-    margin-bottom: -webkit-calc($spacing-unit / 2);
     padding-left: calc($spacing-unit / 2);
-    padding-left: -webkit-calc($spacing-unit / 2);
 }
 
 .footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
     width:         calc(35% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
     width:         calc(20% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
     width:         calc(45% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
     .footer-col-1,
     .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
         width:         calc(50% - (#{$spacing-unit} / 2));
     }
 
     .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
     }
 }
@@ -242,7 +233,6 @@
 @include media-query($on-palm) {
     .footer-col {
         float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
     }
 }
